--- a/index.html
+++ b/index.html
@@ -13,6 +13,37 @@
 </head>
 <body>
     
+    <div class="bg-top"></div>
+
+    <header class="width-fix mt-5">
+
+        <div class="card">
+
+            <div class="d-flex">
+
+                <div class="container-img">
+
+                </div>
+
+                <div class="infos">
+
+                    <h1><b>Reis Burguer</b></h1>
+                    <div class="infos-sub">
+                        <p class="status-open">
+                            <i class="fa fa-clock"></i>Aberto
+                        </p>
+                        <a href="#" class="link">
+                            ver mais
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+
+    </header>
 
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
