--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
 
     </header>
 
+    <section class="categoria width-fix mt-4">
+        <div class="container-menu" id="listaCategoria">
+
+            <a href="#" class="item-categoria btn btn-white btn-sm mb-3 me-3">
+                <i class="fas fa-hamburger"></i> &nbsp;Burguers
+            </a>
+
+            <a href="#" class="item-categoria btn btn-white btn-sm mb-3 me-3">
+                <i class="fas fa-hamburger"></i> &nbsp;Combos
+            </a>
+
+            <a href="#" class="item-categoria btn btn-white btn-sm mb-3 me-3">
+                <i class="fas fa-cocktail"></i> &nbsp;Bebidas
+            </a>
+
+            <a href="#" class="item-categoria btn btn-white btn-sm mb-3 me-3">
+                <i class="fas fa-utensils"></i> &nbsp;Acompanhamentos
+            </a>
+        </div>
+
+    </section>
+
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.js"></script>
