--- a/index.html
+++ b/index.html
@@ -66,6 +66,29 @@
 
     </section>
 
+    <section class="lista width-fix mt-0 pb-5" id="listaItensCardapio">
+
+
+        <div class="container-group mb-5">
+            <p class="title-categoria"><b>Burguer do Rei</b></p>
+
+            <div class="card mb-2 item-cardapio">
+                <div class="d-flex">
+                    <div class="container-img-produto" style="background-image: url(./img/Bacon\ Reis.jpg); background-size: cover;">
+
+                    </div>
+                    <div class="infos-produto">
+                        <p class="name"><b>Bacon Reis</b></p>
+                        <p class="description">Carne 120g, Cheddar, Bacon</p>
+                        <p class="price"><b>29,99</b></p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.js"></script>
