--- a/index.html
+++ b/index.html
@@ -85,7 +85,50 @@
                 </div>
 
             </div>
+
+            <div class="card mb-2 item-cardapio">
+                <div class="d-flex">
+                    <div class="container-img-produto" style="background-image: url(./img/calabresa\ 2\ Reis.jpg); background-size: cover;">
+
+                    </div>
+                    <div class="infos-produto">
+                        <p class="name"><b>Calabresa Reis</b></p>
+                        <p class="description">Carne 120g, Cheddar, Calabresa e Cebola caramelizada</p>
+                        <p class="price"><b>29,99</b></p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="card mb-2 item-cardapio">
+                <div class="d-flex">
+                    <div class="container-img-produto" style="background-image: url(./img/Onios\ Reis.jpg); background-size: cover;">
+
+                    </div>
+                    <div class="infos-produto">
+                        <p class="name"><b>Onions Reis</b></p>
+                        <p class="description">Carne 120g, Cheddar,Onions Rings</p>
+                        <p class="price"><b>29,99</b></p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="card mb-2 item-cardapio">
+                <div class="d-flex">
+                    <div class="container-img-produto" style="background-image: url(./img/Charque\ Reis.jpg); background-size: cover;">
+
+                    </div>
+                    <div class="infos-produto">
+                        <p class="name"><b>Charque Reis</b></p>
+                        <p class="description">Carne 120g, Mussarela, Charque e Cebola caramelizada</p>
+                        <p class="price"><b>29,99</b></p>
+                    </div>
+                </div>
+
+            </div>
         </div>
+        
 
     </section>
 
