menu inferior front

--- a/index.html
+++ b/index.html
@@ -132,6 +132,22 @@
 
     </section>
 
+    <section class="menu-bottom" id="menu-bottom">
+
+        <a class="menu-bottom-item active">
+            <i class="fas fa-book-open"></i> &nbsp; Cardápio
+        </a>
+        <a class="menu-bottom-item">
+            <i class="fas fa-utensils"></i> &nbsp; Pedido
+        </a>
+        <a class="menu-bottom-item">
+            <span class="badge-total-carrinho">2</span>
+            <i class="fas fa-shopping-cart"></i> &nbsp; Carrinho
+        </a>
+
+
+    </section>
+
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.js"></script>
