add: shop closed

--- a/index.html
+++ b/index.html
@@ -142,8 +142,15 @@
         </a>
         <a class="menu-bottom-item">
             <span class="badge-total-carrinho">2</span>
-            <i class="fas fa-shopping-cart"></i> &nbsp; Carrinho
+           <!-- <i class="fas fa-shopping-cart"></i> &nbsp;--> Carrinho
         </a>
+
+
+    </section>
+
+    <section class="menu-bottom disable hidden" id="menu-bottom-closed">
+
+        <p class="mb-0"><b>Loja fechada no momento</b></p>
 
 
     </section>
