--- a/item.html
+++ b/item.html
@@ -53,6 +53,61 @@
         </div>
     </section>
 
+    <section class="opcionais width-fix mt-5 pb-5">
+        
+        <div class="container-group mb-5">
+            <span class="badge">Obrigatório</span>
+
+            <p class="title-categoria mb-0"><b>Deseja Molho?</b></p>
+            <span class="sub-title-categoria">Escolha 1 opção</span>
+
+            <div class="card card-opcionais mt-2">
+                <div class="infos-produto-opcional">
+                    <p class="name mb-0"><b>Molho Verde</b></p>
+                    <p class="price mb-0"><b>+ R$ 1,99</b></p>
+                </div>
+                <div class="checks">
+                    <label class="container-check">
+                        <input type="checkbox" checked="checked">
+                        <span class="checkmark"></span>
+                    </label>
+
+
+                </div>
+
+
+            </div>
+            <div class="card card-opcionais mt-2">
+                <div class="infos-produto-opcional">
+                    <p class="name mb-0"><b>Molho Verde</b></p>
+                    <p class="price mb-0"><b>+ R$ 1,99</b></p>
+                </div>
+                <div class="checks">
+                    <label class="container-check">
+                        <input type="checkbox" checked="checked">
+                        <span class="checkmark"></span>
+                    </label>
+
+
+                </div>
+
+
+            </div>
+
+        </div>
+        
+
+
+        <div class="container-group mb-5">
+
+            <p class="title-categoria mb-0"><b>Observações</b></p>
+            <span class="sub-title-categoria">Informe alguma observação abaixo</span>
+
+            <textarea class="form-control mt-2" rows="5"></textarea>
+
+
+    </section>
+
 
     <section class="menu-bottom" id="menu-bottom">
 
