add: menu inferior /Detalhes.

--- a/item.html
+++ b/item.html
@@ -104,23 +104,27 @@
             <span class="sub-title-categoria">Informe alguma observação abaixo</span>
 
             <textarea class="form-control mt-2" rows="5"></textarea>
-
+        </div>
 
     </section>
 
 
-    <section class="menu-bottom" id="menu-bottom">
+    <section class="menu-bottom details" id="menu-bottom">
+      <div class="add-carrinho">
 
-        <a class="menu-bottom-item active">
-            <i class="fas fa-book-open"></i> &nbsp; Cardápio
-        </a>
-        <a class="menu-bottom-item">
-            <i class="fas fa-utensils"></i> &nbsp; Pedido
-        </a>
-        <a class="menu-bottom-item">
-            <span class="badge-total-carrinho">2</span>
-           <!-- <i class="fas fa-shopping-cart"></i> &nbsp;--> Carrinho
-        </a>
+        <span class="btn-menos">
+            <i class="fas fa-minus"></i>
+        </span>
+        <span class="add-numero-itens">
+            2
+        </span>
+        <span class="btn-mais">
+            <i class="fas fa-plus"></i>
+
+      </div>
+      <a class="btn btn-yellow btn-sm">
+        Adicionar <span>R$ 39,99</span>
+      </a>
 
 
     </section>
@@ -138,6 +142,6 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
-    <script type="text/javascript" src="js/cardapio.js"></script>
+    <script type="text/javascript" src="js/item.js"></script>
 </body>
 </html>
