Add: Adress card

--- a/sobre.html
+++ b/sobre.html
@@ -42,18 +42,18 @@
 
             <div class="d-flex">
 
-                <div class="container-img-sobre" style="background-image: url(./img/6.png); background-size:cover;">
+                <div class="container-img-sobre" style="background-image: url(./img/6.png); background-size:100%;"></div>
 
-                    <div class="infos">
-                        <h1 class="title-sobre"><b>Reis Burguer</b></h1>
-                        <div class="infos-sub">
-                            <p class="sobre mb-2">Descubra uma experiência digna de realeza em cada mordida!
+                <div class="infos">
+                    <h1 class="title-sobre"><b>Reis Burguer</b></h1>
+                    <div class="infos-sub">
+                       <p class="sobre mb-2">Descubra uma experiência digna de realeza em cada mordida!
                                 Na Reis Burguer, nossos hambúrgueres artesanais são preparados com ingredientes frescos e de qualidade,
                                 garantindo um sabor inigualável. Nossa seleção inclui desde opções clássicas até criações exclusivas,
                                 todas pensadas para agradar a todos os paladares. Experimente nossos combos com fritas crocantes e 
                                 molhos especiais que vão deixar você querendo mais. Peça agora e tenha uma experiência de sabor 
                                 que só a Reis Burguer pode oferecer! COMA FEITO REI NA REIS BURGUER!</p>
-                        </div>
+
 
                     </div>
 
@@ -65,7 +65,19 @@
         </div>
 
     </section>
-   
+    
+    <section class="lista width-fix mt-5 pb-5">
+
+        <div class="container-group mb-5">
+            <p class="title-categoria mb-0">
+                <i class="fas fa-map-marker-alt"></i><b>&nbsp; Endereço</b>
+            </p>
+            <div class="card mt-2">
+                <p class="normal-text mb-0"> Rua Emilio Monteiro Fonseca,1826 - Jordão Baixo - Recife/PE</p>
+            </div>
+        </div>
+
+    </section>
 
     <section class="menu-bottom disable hidden" id="menu-bottom-closed">
 
