add: pagamentos e fixed bugs

--- a/sobre.html
+++ b/sobre.html
@@ -77,7 +77,40 @@
             </div>
         </div>
 
+        <div class="container-group mb-5">
+            <p class="title-categoria mb-0">
+                <i class="fas fa-clock"></i><b>&nbsp; Horario de Funcionamento</b>
+            </p>
+            <div class="card mt-2">
+                <p class="normal-text mb-0"><b>Segunda a Sexta</b></p>
+                <p class="normal-text mb-0">18:00 às 23:00</p>
+            </div>
+        </div>
+
+
+        <div class="container-group mb-5">
+            <p class="title-categoria mb-0">
+                <i class="fas fa-coins"></i><b>&nbsp; Formas De Pagamento</b>
+            </p>
+            <div class="card mt-2">
+                <p class="normal-text mb-0"><b>Crédito</b></p>
+            </div>
+            <div class="card mt-2">
+                <p class="normal-text mb-0"><b>Débito</b></p>
+            </div>
+            <div class="card mt-2">
+                <p class="normal-text mb-0"><b>Dinheiro</b></p>
+            </div>
+            <div class="card mt-2">
+                <p class="normal-text mb-0"><b>Pix</b></p>
+            </div>
+        </div>
+
     </section>
+
+    <a href="./index.html" class="btn btn-yellow btn-full">
+        Voltar para o Cardapio
+    </a>
 
     <section class="menu-bottom disable hidden" id="menu-bottom-closed">
 
