--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <p class="status-open">
                             <i class="fa fa-clock"></i>Aberto
                         </p>
-                        <a href="#" class="link">
+                        <a href="./sobre.html" class="link">
                             ver mais
                         </a>
                     </div>
