--- a/sobre.html
+++ b/sobre.html
@@ -108,7 +108,7 @@
 
     </section>
 
-    <a href="./index.html" class="btn btn-yellow btn-full">
+    <a href="./index.html" class="btn btn-yellow btn-full voltar">
         Voltar para o Cardapio
     </a>
 
