--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <a class="menu-bottom-item">
             <i class="fas fa-utensils"></i> &nbsp; Pedido
         </a>
-        <a class="menu-bottom-item">
+        <a href="./carrinho.html" class="menu-bottom-item">
             <span class="badge-total-carrinho">2</span>
            <!-- <i class="fas fa-shopping-cart"></i> &nbsp;--> Carrinho
         </a>
