fix: details cart

--- a/carrinho.html
+++ b/carrinho.html
@@ -73,7 +73,7 @@
 
                 </div>
                 <div class="detalhes-produto-edit">
-
+                    <i class="fas fa-pencil-alt"></i>
                 </div>
 
             </div>
