Add: infos/Total Product

--- a/carrinho.html
+++ b/carrinho.html
@@ -55,7 +55,7 @@
     </section>
 
     <section class="carrinho width-fix mt-4">
-        <div class="card mb2 pr-0">
+        <div class="card mb-2 pr-0">
 
             <div class="container-detalhes">
 
@@ -71,6 +71,10 @@
                         <p class="price-opcional mb-0">+R$ 5,99</p>
                     </div>
 
+                    <div class="infos-produto">
+                        <p class="obs-opcional mb-0">- Observação para enviar Ketchup</p>
+                    </div>
+
                 </div>
                 <div class="detalhes-produto-edit">
                     <i class="fas fa-pencil-alt"></i>
@@ -79,6 +83,46 @@
             </div>
 
         </div>
+
+        <div class="card mb-2 pr-0">
+
+            <div class="container-detalhes">
+
+                <div class="detalhes-produto">
+
+                    <div class="infos-produto">
+                        <p class="name"><b>1x Mussarela Imperial</b></p>
+                        <p class="price"><b>R$ 26,99</b></p>
+                    </div>
+
+                    <div class="infos-produto">
+                        <p class="name-opcional mb-0">1x Mussarela</p>
+                        <p class="price-opcional mb-0">+R$ 2,99</p>
+                    </div>
+
+                </div>
+                <div class="detalhes-produto-edit">
+                    <i class="fas fa-pencil-alt"></i>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="card mb-2">
+            <div class="infos-produto">
+                <p class="name mb-0"><i class="fas fa-motorcycle"></i><b>&nbsp;Taxa de Entrega</b></p>
+                <p class="price mb-0"><b>+ R$ 8,90</b></p>
+            </div>
+        </div>
+
+        <div class="card mb-2">
+            <div class="infos-produto">
+                <p class="name-total mb-0"><b>Total</b></p>
+                <p class="price-total mb-0"><b>R$ 69,90</b></p>
+            </div>
+        </div>
+
     </section>
 
     <a href="./index.html" class="btn btn-yellow btn-full voltar">
