--- a/carrinho.html
+++ b/carrinho.html
@@ -125,8 +125,123 @@
 
     </section>
 
-    <a href="./index.html" class="btn btn-yellow btn-full voltar">
-        Voltar para o Cardapio
+    <section class="opcionais width-fix mt-5 pb-5">
+
+        <div class="container-group mb-5">
+            <span class="badge">Obrigatório</span>
+
+            <p class="title-categoria mb-0"><b>Escolha uma opção</b></p>
+            <span class="sub-title-categoria">Como quer receber o pedido?</span>
+
+            <div class="card card-opcionais mt-2">
+                <div class="infos-produto-opcional">
+                    <p class="name mb-0"><b>Entrega (60-90min)</b></p>
+                </div>
+                <div class="checks">
+                    <label class="container-check">
+                        <input type="checkbox" />
+                        <span class="checkmark"></span>
+                    </label>
+                </div>
+            </div>
+
+            <div class="card card-opcionais mt-2">
+                <div class="infos-produto-opcional">
+                    <p class="name mb-0"><b>Retirar no estabelecimento</b></p>
+                </div>
+                <div class="checks">
+                    <label class="container-check">
+                        <input type="checkbox" />
+                        <span class="checkmark"></span>
+                    </label>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="container-group mb-5">
+            <span class="badge">Obrigatório</span>
+
+            <p class="title-categoria mb-0"><b>Qual o seu endereço?</b></p>
+            <span class="sub-title-categoria">Informe o endereço da entrega</span>
+
+            <div class="card card-select mt-2">
+                <div class="infos-produto-opcional">
+                    <p class="mb-0 color-primary">
+                        <i class="fas fa-plus-circle"></i>&nbsp; Nenhum endereço selecionado
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card-address mt-2">
+                <div class="img-icon-details">
+                    <i class="fas fa-map-marked-alt"></i>
+                </div>
+                <div class="infos">
+                    <p class="name mb-0"><b>Rua Olá Mundo, 123, Meu Mairro</b></p>
+                    <span class="text mb-0">Cidade-SP / 12345-678</span>
+                </div>
+                <div class="icon-edit">
+                    <i class="fas fa-pencil-alt"></i>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="container-group mb-5">
+            <span class="badge">Obrigatório</span>
+
+            <p class="title-categoria mb-0"><b>Nome e Sobrenome</b></p>
+            <span class="sub-title-categoria">Como vamos te chamar?</span>
+
+            <input type="text" class="form-control mt-2" placeholder="* Informe o nome e sobrenome" />
+
+        </div>
+
+        <div class="container-group mb-5">
+            <span class="badge">Obrigatório</span>
+
+            <p class="title-categoria mb-0"><b>Número do seu celular</b></p>
+            <span class="sub-title-categoria">Para mais informações do pedido</span>
+
+            <input type="text" class="form-control mt-2" placeholder="(00) 0000-0000" />
+
+        </div>
+
+        <div class="container-group mb-5">
+            <span class="badge">Obrigatório</span>
+
+            <p class="title-categoria mb-0"><b>Como você prefere pagar?</b></p>
+            <span class="sub-title-categoria">* Pagamento na entrega</span>
+
+            <div class="card card-select mt-2">
+                <div class="infos-produto-opcional">
+                    <p class="mb-0 color-primary">
+                        <i class="fas fa-plus-circle"></i>&nbsp; Nenhuma forma selecionada
+                    </p>
+                </div>
+            </div>
+
+            <div class="card card-address mt-2">
+                <div class="img-icon-details">
+                    <!-- <i class="fas fa-coins"></i> -->
+                    <i class="fas fa-credit-card"></i>
+                </div>
+                <div class="infos">
+                    <p class="name mb-0"><b>Cartão de Crédito</b></p>
+                    <span class="text mb-0">Levar maquininha</span>
+                </div>
+                <div class="icon-edit">
+                    <i class="fas fa-pencil-alt"></i>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <a href="./index.html" class="btn btn-yellow btn-full">
+        Fazer Pedido <span>R$69,90</span>
     </a>
 
     <section class="menu-bottom disable hidden" id="menu-bottom-closed">
