--- a/painel/home.html
+++ b/painel/home.html
@@ -53,6 +53,35 @@
         </div>
 
         <div class="conteudo">
+            <div class="menu-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 d-flex align-items-center mt-4">
+
+                            <h1 class="title-page">
+                                <b>
+                                    <i class="fas fa-home"></i>&nbsp; Seja bem-vindo(a)!
+                                </b>
+                            </h1>
+
+                            <div class="container-right">
+                                <div class="container-dados">
+                                    <p>Reis Burguer</p>
+                                    <span>reis.burguer@contato.com</span>
+                                </div>
+                                <a href="#" class="btn btn-white btn-sm">
+                                    <i class="fas fa-sign-out-alt"></i>&nbsp; Sair
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="conteudo-inner">
+                                    
+            </div>
 
         </div>
 
