add: Menu pedidos and fix: telas

--- a/painel/pedidos.html
+++ b/painel/pedidos.html
@@ -24,11 +24,11 @@
 
             <div class="menus">
 
-                <a href="./home.html" class="menu-item active">
+                <a href="./home.html" class="menu-item">
                     <i class="fas fa-home"></i> Início
                 </a>
 
-                <a href="./pedidos.html" class="menu-item">
+                <a href="./pedidos.html" class="menu-item active">
                     <i class="fas fa-utensils"></i> Pedidos
                 </a>
 
@@ -80,8 +80,47 @@
             </div>
 
             <div class="conteudo-inner">
-                                    
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-12">
+                            <div class="menus-pedido">
+
+                                <a href="#" class="btn btn-white btn-sm">
+                                    <i class="far fa-dot-circle"></i> Pendentes
+                                    <span class="badge-total-pedidos">2</span>
+                                </a>
+
+                                <a href="#" class="btn btn-white btn-sm">
+                                    <i class="far fa-thumbs-up"></i> Aceito
+                                    <span class="badge-total-pedidos">1</span>
+                                </a>
+
+                                <a href="#" class="btn btn-white btn-sm active">
+                                    <i class="far fa-clock"></i> Em preparo
+                                    <span class="badge-total-pedidos">1</span>
+                                </a>
+
+                                <a href="#" class="btn btn-white btn-sm">
+                                    <i class="fas fa-motorcycle"></i> Em entrega
+                                </a>
+
+                                <a href="#" class="btn btn-white btn-sm">
+                                    <i class="far fa-check-circle"></i> Concluído
+                                </a>
+
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+
+                        </div>
+
+                    </div>
+                </div>       
             </div>
+
+        </div>
 
         </div>
 
