--- a/client/painel/login.html
+++ b/client/painel/login.html
@@ -24,21 +24,21 @@
                 <span class="icon-form">
                     <i class="fas fa-envelope"></i>
                 </span>
-                <input type="email" class="form-control" placeholder="E-mail" />
+                <input id="txtEmailLogin" type="email" class="form-control" placeholder="E-mail" />
             </div>
 
             <div class="form-group mb-3">
                 <span class="icon-form">
                     <i class="fas fa-lock"></i>
                 </span>
-                <input type="password" class="form-control" placeholder="Senha" />
+                <input id="txtSenhaLogin" type="password" class="form-control" placeholder="Senha" />
             </div>
 
             <a href="#" class="link-painel">
                 Esqueceu sua senha?
             </a>
 
-            <a href="#" class="btn btn-yellow btn-login mt-4">
+            <a id="btnLogin" href="#" class="btn btn-yellow btn-login mt-4">
                 Fazer Login
             </a>
 
