--- a/client/painel/login.html
+++ b/client/painel/login.html
@@ -48,6 +48,7 @@
 
 
     <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
     <script type="text/javascript" src="./js/login.js"></script>
 
 </body>
