--- a/client/painel/login.html
+++ b/client/painel/login.html
@@ -14,6 +14,10 @@
 </head>
 <body>
 
+    <div class="container-mensagens" id="container-mensagens">
+
+    </div>
+
     <section class="login">
 
         <div class="card card-login">
