Configuração de Logout, Dados da empresas, logotipos e BD

--- a/client/painel/home.html
+++ b/client/painel/home.html
@@ -19,7 +19,7 @@
         <div class="menu-left">
 
             <div class="logo">
-                <img src="../img/6.png" width="120" />
+                <img class="logo-empresa" width="100" />
             </div>
 
             <div class="menus">
@@ -66,10 +66,10 @@
 
                             <div class="container-right">
                                 <div class="container-dados">
-                                    <p>Reis Burguer</p>
-                                    <span>reis.burguer@contato.com</span>
+                                    <p class="nome-empresa"></p>
+                                    <span class="email-empresa"></span>
                                 </div>
-                                <a href="#" class="btn btn-white btn-sm">
+                                <a href="#" class="btn btn-white btn-sm" onclick="app.method.logout()">
                                     <i class="fas fa-sign-out-alt"></i>&nbsp; Sair
                                 </a>
                             </div>
@@ -86,6 +86,9 @@
         </div>
 
     </section>
+    <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="./js/home.js"></script>
 
 </body>
 </html>
